# lpo_data_AI

./: .env  .gitignore  README.md  app.py  architecture.md  check.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  sql_agent.py
.github/workflows/: python-app.yml
brouillons/: AI_generator.py  dash_v2.py  dashboard.py  dataretrive.py
brouillons/query/: requetes.py
data/: sensitive_areas.db
data_retrieve/: data_retrieve.py
inputbox/: inputBox.py
src/agents/: base_agent.py  sql_agents 2.py  sql_agents.py  visualization_agent.py
src/ai/: agent.py  cleaning.py  middleware.py  model_factory.py  tools.py  viz_engine.py
src/ai/prompts/: system_sql.md
src/ai/prompts/skills/sql-lpo/: SKILL.md
src/config/: __init__.py  logging_config.py  settings.py
src/core/: exceptions.py  models.py  security.py
src/database/: connection.py  engine.py  migrations.py  repositories.py
src/services/: ai_service.py  cache_service.py  data_service.py
src/ui/: utils.py
src/ui/pages/: dashboard.py  query_interface.py
