[project]
name = "lpo-data-ai"
version = "0.1.0"
description = "LPO AI — Assistant SQL pour l'analyse des zones sensibles"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "sqlparse>=0.5.0",
    "SQLAlchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "geopy>=2.4.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "deepagents>=0.6.11",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-openai>=1.3.3",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
